# AnimalBehaviourSimulator

./: CMakeLists.txt  Readme.txt
include/: Animal.h  Constans.h  Coord.h  CoordsGenerator.h  MoveAlgorithm.h  Rabbit.h
source/: Coord.cpp  main.cpp
